--- a/website/www/strand/support/index.html
+++ b/website/www/strand/support/index.html
@@ -1,5 +1,23 @@
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+<link rel="stylesheet" type="text/css" href="/strand/strand.css" media="screen" />
+<style>
+.ui-choices {
+	padding: 0px 0px 10px 0px;
+}
+</style>
 <body>
-This is the strand support website...
+
+<div class='ui-header'> Strand Support </div>
+
+<div class="ui-top-summary"> 
+	Thank you for visiting Strand support. We are here to help. Please select from one of the following options below:
+</div>
+
+<div class='ui-choices'> <a href='/strand/support/inappropriate.html'>Report abuse or inappropriate content </a></div>
+<div class='ui-choices'> <a href='mailto:strand-support@duffytech.co?Subject=Strand Support'>General help </a></div>
+<div class='ui-choices'> <a href='mailto:strand-feedback@duffytech.co?Subject=Strand Support'>Feedback</a></div>
+
+<div class="ui-footer"> &copy; 2014 Duffy, Inc.</div>  
 </body>
 </html>
