--- a/website/www/strand/terms.html
+++ b/website/www/strand/terms.html
@@ -2,7 +2,12 @@
 <title>
 	Strand Terms of Use
 </title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+<link rel="stylesheet" type="text/css" href="/strand/strand.css" media="screen" />
+
 <body>
-[Insert EULA here]
+<div class='ui-header'> Strand Terms of Use</div>
+
+<div class="ui-footer"> &copy; 2014 Duffy, Inc.</div>
 </body>
 </html>
