update html of inappropriate content form

--- a/website/www/strand/support/inappropriate.html
+++ b/website/www/strand/support/inappropriate.html
@@ -33,7 +33,7 @@ textarea {
 
 <div class="ui-fields">
 
-<form>
+<form action="http://dev.duffyapp.com/strand/viz/report_inappropriate">
   <fieldset>
     <label for="name">Your phone #:</label>
     <input type="text" name="name" id="name" autocomplete='off'/>
