--- a/website/www/strand/dl_main.html
+++ b/website/www/strand/dl_main.html
@@ -14,12 +14,24 @@
 
 	<style>
 	body {
-		/*background-color: rgba(241,125,82,0.5);*/
-		width: 310px;
+		/*width: 310px;*/
+	}
+	.ui-content {
+
+	}
+	.ui-header {
+		overflow: auto;
+		height: 60px;
+		padding: 0px;
+		background-color: rgba(241,125,82,0.5);
+	}
+	.ui-top-summary {
+		float: left;
+		height: 30px;
+		padding: 10px 75px 0px 75px;
+		text-align: center;
 	}
 	.ui-screenshots {
-		margin-right: auto;
-		margin-left: auto;
 		float:left;
 		width:100%;
 	}
@@ -27,9 +39,7 @@
 		display:block;
 		margin-right: auto;
 		margin-left: auto;
-		height: 363px;
-		width: 200px;
-
+		height: 290px;
 	}
 	.ui-strand-text {
 		padding-top: 5px;
@@ -37,15 +47,9 @@
 		float: left;
 		text-align: left;
 	}
-	.ui-top-summary {
-		float: left;
-		padding-top: 20px;
-	}
-	.ui-header {
-		overflow: auto;
-	}
 	.ui-dl-text {
 		float:left;
+		height: 33px;
 		width:100%;
 	}
 	.ui-footer {
@@ -57,9 +61,10 @@
 </head>
 <body>
 
+<div class='ui-content'>
+
 <div class='ui-header'> 
 	<img style='float:left' height='30px' width='30px' src='/resources/strand_icon.png'> <div class='ui-strand-text'> Strand Beta </div>
-
 </div>
 
 <div class="ui-top-summary"> 
@@ -78,13 +83,15 @@
 	Please open this page in Safari on an iPhone (iOS 7+) to try the app.
 </div>
 </div>
-
-
-<div class="ui-footer"> &copy; 2014 Duffy, Inc.</div>  
+<p>
+<p>
+<p>
+<p>
+</div> 
 </body>
 <script>
 	function dlClicked(){
-		localytics.tagEvent("DL_Clicked");
+		localytics.tagEvent("DL_Clicked_fb1");
 		window.location.href = 'itms-services://?action=download-manifest&url=https%3A%2F%2Frink.hockeyapp.net%2Fapi%2F2%2Fapps%2F81845532ce7ca873cdfce8e43f8abce9%2Fapp_versions%2F30%3F%26avtoken%3Dbc066bce6c500e52fe721bc6894a4f9b8689d4df';
 	}
 	
