added bigger hit targets

--- a/website/www/strand/dl_fb4.html
+++ b/website/www/strand/dl_fb4.html
@@ -153,6 +153,9 @@
 		$('img.ui-appstore').click(function() {
 			dlClicked();
 		});
+		$('div.ui-screenshots').click(function(){
+			dlClicked();
+		});
 	});
 	
 </script>
