setting up fb4 for targeting people who are connected to app page

--- a/website/www/strand/dl_fb4.html
+++ b/website/www/strand/dl_fb4.html
@@ -114,11 +114,11 @@
 	<img class='ui-image' src='/resources/sample_mock.png'>
 </div>
 
-<div class='ui-dl'>
+<div class='ui-dl hidden'>
 	<span class='ui-dl-text'>Try Strand now!</span>
 </div>
 
-<div class='ui-dl-appstore hidden'>
+<div class='ui-dl-appstore'>
 	<img class='ui-appstore' src='/resources/appstore.svg'>
 </div>
 <p>
