updating screenshot on the website

--- a/website/www/swap/dl.html
+++ b/website/www/swap/dl.html
@@ -128,7 +128,7 @@
 
 
 	<div class='ui-screenshots' id='screenshot'>
-		<img class='ui-image' src='/resources/photos_tab.png'>
+		<img class='ui-image' src='/resources/screenshot_photos.jpg'>
 	</div>
 
 	<div class='ui-dl' id='dl-link'>
