replacing strand with swap on public facing pages for app store

--- a/website/www/strand/dmca.html
+++ b/website/www/strand/dmca.html
@@ -42,7 +42,7 @@
 	behalf of the copyright owner.
 </p>
 <p>
-	Please contact the Designated Agent to Receive Notification of Claimed Infringement for Company at <a href="mailto:strand-support@duffytech.co?subject=DMCA">strand-support@duffytech.co</a> or at:
+	Please contact the Designated Agent to Receive Notification of Claimed Infringement for Company at <a href="mailto:support@duffytech.co?subject=DMCA">support@duffytech.co</a> or at:
 </p>
 <div class='ui-indent'>
 <p>
