--- a/website/www/strand/privacy.html
+++ b/website/www/strand/privacy.html
@@ -255,7 +255,7 @@ We may offer features that are based on the location of users and which may repo
 	<strong>How Can I Delete My Account? </strong>
 </p>
 <p>
-	Should you ever decide to delete your Account, you may do so by emailing <a href='mailto:strand-support@duffytech.co?subject=Account Deletion'>strand-support@duffytech.co</a>. If you terminate your Account, any association between
+	Should you ever decide to delete your Account, you may do so by emailing <a href='mailto:support@duffytech.co?subject=Account Deletion'>support@duffytech.co</a>. If you terminate your Account, any association between
 	your Account and information we store will no longer be accessible through your Account. However, given the nature of sharing on the Services, any public
 	activity on your Account prior to deletion will remain stored on our servers and will remain accessible to the public.
 </p>
@@ -282,13 +282,13 @@ We may offer features that are based on the location of users and which may repo
 	<strong></strong>
 </p>
 <p>
-	If you have any questions or concerns regarding privacy using the Services, please send us a detailed message to <a href="mailto:strand-legal@duffytech.co?subject=Privacy Policy">strand-legal@duffytech.co</a>. We will make every effort to resolve your concerns.
+	If you have any questions or concerns regarding privacy using the Services, please send us a detailed message to <a href="mailto:legal@duffytech.co?subject=Privacy Policy">legal@duffytech.co</a>. We will make every effort to resolve your concerns.
 </p>
 <p>
 	<strong>Effective Date:</strong> July 9, 2014
 </p>
 
 </div>
-<div class="ui-footer"> &copy; 2014 Duffy, Inc.</div>
+<div class="ui-footer"> &copy; 2015 Duffy, Inc.</div>
 </body>
 </html>
