--- a/website/www/strand/support/inappropriate.html
+++ b/website/www/strand/support/inappropriate.html
@@ -1,6 +1,6 @@
 <html>
 <title>
-	Strand - Report inappropriate content
+	Swap - Report inappropriate content
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" type="text/css" href="/strand/strand.css" media="screen" />
@@ -25,15 +25,15 @@ textarea {
 </style>
 
 <body>
-	<div class='ui-header'>Report inappropriate content on Strand</div>
+	<div class='ui-header'>Report inappropriate content on Swap</div>
 
 	<div class="ui-top-summary">
-		Please use the form below to report any inappropriate content and Strand user who shared that content.
+		Please use the form below to report any inappropriate content and Swap user who shared that content.
 	</div>
 
 <div class="ui-fields">
 
-<form action="http://dev.duffyapp.com/strand/viz/report_inappropriate">
+<form action="http://prod.strand.duffyapp.com/strand/viz/report_inappropriate">
   <fieldset>
     <label for="name">Your phone #:</label>
     <input type="text" name="name" id="name" autocomplete='off'/>
@@ -55,6 +55,6 @@ textarea {
   </fieldset>
 </form>
 </div>
-<div class="ui-footer"> &copy; 2014 Duffy, Inc.</div>  
+<div class="ui-footer"> &copy; 2015 Duffy, Inc.</div>  
 </body>
 </html>
