--- a/website/www/strand/support/index.html
+++ b/website/www/strand/support/index.html
@@ -8,16 +8,16 @@
 </style>
 <body>
 
-<div class='ui-header'> Strand Support </div>
+<div class='ui-header'> Swap Support </div>
 
 <div class="ui-top-summary"> 
-	Thank you for visiting Strand support. We are here to help. Please select from one of the following options below:
+	Thank you for visiting Swap support. We are here to help. Please select from one of the following options below:
 </div>
 
 <div class='ui-choices'> <a href='/strand/support/inappropriate.html'>Report abuse or inappropriate content </a></div>
 <div class='ui-choices'> <a href='mailto:strand-support@duffytech.co?Subject=Strand Support'>General help </a></div>
 <div class='ui-choices'> <a href='mailto:strand-feedback@duffytech.co?Subject=Strand Support'>Feedback</a></div>
 
-<div class="ui-footer"> &copy; 2014 Duffy, Inc.</div>  
+<div class="ui-footer"> &copy; 2015 Duffy, Inc.</div>  
 </body>
 </html>
