--- a/website/www/strand/terms.html
+++ b/website/www/strand/terms.html
@@ -11,7 +11,7 @@
 </style>
 
 <body>
-<div class='ui-header'> Strand Terms of Use</div>
+<div class='ui-header'> Swap Terms of Use</div>
 
 <div class-'ui-content'>
 <p>
@@ -310,7 +310,7 @@ b. <strong>User Content</strong>. All Content added, created, uploaded, submitte
 	e. <strong>Notices</strong>. Unless otherwise specified in these Term of Service, all notices under these Terms of Service will be in writing and will be
 	deemed to have been duly given when received, if personally delivered or sent by certified or registered mail, return receipt requested; when receipt is
 	electronically confirmed, if transmitted by facsimile or e-mail; or the day after it is sent, if sent for next day delivery by recognized overnight
-	delivery service. Electronic notices should be sent to <a href='mailto:strand-legal@duffytech.co'>strand-legal@duffytech.co</a>.
+	delivery service. Electronic notices should be sent to <a href='mailto:legal@duffytech.co'>legal@duffytech.co</a>.
 </p>
 <p>
 	f. <strong>No Waiver</strong>. Our failure to enforce any part of these Terms of Service shall not constitute a waiver of our right to later enforce that
