--- a/website/wwwSwap/index.html
+++ b/website/wwwSwap/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title> Download Swap </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-	<link rel="stylesheet" type="text/css" href="/swap/swap.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="/resources/swap.css" media="screen" />
 	<script src='/resources/jquery-1.10.2.min.js'> </script>
 	<script src="/resources/jquery.maskedinput.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="//web.localytics.com/latest/localytics.min.js"></script>
@@ -182,7 +182,7 @@
 <div class='ui-content'>
 
 	<div class='ui-header'>
-		<img class='ui-icon' src='/resources/swap_icon.png'> 
+		<img class='ui-icon' src='/resources/images/swap_icon.png'> 
 		<div class='ui-header-lhs'>
 			<div class='ui-header-top-text'> Swap Beta </div>
 			<div class='ui-header-bottom-text'> Duffy, Inc. </div>
@@ -196,7 +196,7 @@
 
 		<div class='ui-pages'>
 			<div class='ui-screenshots'>
-				<img class='ui-image' id='main-image' src='/resources/1a.jpg'>
+				<img class='ui-image' id='main-image' src='/resources/images/1a.jpg'>
 			</div>
 
 			<div class="ui-bottom"> 
@@ -205,7 +205,7 @@
 		</div>
 		<div class='ui-pages'>
 			<div class='ui-screenshots'>
-				<img class='ui-image' src='/resources/2a.jpg'>
+				<img class='ui-image' src='/resources/images/2a.jpg'>
 			</div>
 
 			<div class="ui-bottom"> 
@@ -214,7 +214,7 @@
 		</div>
 		<div class='ui-pages'>
 			<div class='ui-screenshots'>
-				<img class='ui-image' src='/resources/3a.jpg'>
+				<img class='ui-image' src='/resources/images/3a.jpg'>
 			</div>
 
 			<div class="ui-bottom"> 
@@ -223,7 +223,7 @@
 		</div>
 		<div class='ui-pages'>
 			<div class='ui-screenshots'>
-				<img class='ui-image' src='/resources/4a.jpg'>
+				<img class='ui-image' src='/resources/images/4a.jpg'>
 			</div>
 
 			<div class="ui-bottom"> 
@@ -249,7 +249,7 @@
 				<br>
 				<br>
 				Use your personalized url:
-				<textarea id='link'>invite.swapapp.co/Xvaf3a</textarea>
+				<textarea id='link'></textarea>
 			</div>
 		</div>
 	</div>
@@ -277,37 +277,14 @@
 		$('div.ui-post-signup-details').fadeIn(200);
 	}
 
-	function submitClicked(){
-		if ($('#phone').val().indexOf("5555") == -1){
-			url = 'http://prod.strand.duffyapp.com/strand/api/website_registration';
-			url = 'http://dev.duffyapp.com/strand/api/website_registration';
-			code = getCode();
-			console.log(code);
-			$.ajax({
-     			url: url,
-     			type: 'get',
-     			dataType: 'jsonp',
-     			data: { phone_number: $('#phone').val(), source: 'main', invite_code: code },
-     			success: function(data) {
-					$('div.post-install').fadeOut(200, function(){
-						$('#post-signup').fadeIn(200);
-					});
-     			}
- 			});		
-		}
-	}
-
-
 	function getCode(){
 		pathname = window.location.pathname;
-		lastToken = pathname.substr(pathname.lastIndexOf('?'));
-		console.log(lastToken);
-		if (lastToken.indexOf('html') == -1) {
-			return lastToken
+		lastToken = pathname.substr(pathname.lastIndexOf('/'));
+		if (lastToken.indexOf('html') == -1 && lastToken.length > 5) {
+			return lastToken.substr(1);
 		}
 		// Otherwise, return a new code
 		return genCode()
-
 	}
 
 	/* 
@@ -340,34 +317,52 @@
 
 	  	ga('create', 'UA-53853203-1', 'auto');
 	  	ga('send', 'pageview');
+
+	  	// Install button clicked
 		$('div.ui-install-button').click(function() {
 			dlClicked();
 		});
+
+		// submit button clicked
 		$('div.ui-submit-button').click(function(){
-			submitClicked();
-		})
+			if ($('#phone').val().indexOf("5555") == -1){
+				url = 'http://prod.strand.duffyapp.com/strand/api/website_registration';
+				url = 'http://dev.duffyapp.com/strand/api/website_registration';
+				code = getCode();
+				console.log(code);
+				$.ajax({
+	     			url: url,
+	     			type: 'get',
+	     			dataType: 'jsonp',
+	     			data: { phone_number: $('#phone').val(), source: 'main', invite_code: code },
+	     			success: function(data) {
+						$('div.post-install').fadeOut(200, function(){
+							$('#post-signup').fadeIn(200);
+						});
+						$('#link').append('swapapp.co/'+code);
+	     			}
+	 			});		
+			}
+		});
+
+		// More info on signup button clicked
 		$('div.ui-post-signup-more').click(function(){
 			getAccessSoonerClicked();
-		})
-		/*
-		$('#link').focus(function(){
-			var input = this;
-        	setTimeout(function () {
-        		//input.selectionStart = 0;
-           		//input.selectionEnd = 999;
-           		input.setSelectionRange(0, 999);
-        	},100);
 		});
-		*/
+
+		// Textarea selected to copy link
 		$("#link").focus(function(){
 			this.setSelectionRange(0, 9999); 
 			return false; 
 		}).mouseup(function(){ 
 			return false; });
 
+		// phonenum field in focus
 		$('#phone').focus(function() {
 			$(this).addClass('color');
 		});
+
+		// Enable mask on phonenum
 		$('#phone').mask("(999) 999-9999");
 	});
 	
