--- a/website/wwwSwap/index.html
+++ b/website/wwwSwap/index.html
@@ -7,6 +7,7 @@
 	<script src='/resources/jquery-1.10.2.min.js'> </script>
 	<script src="/resources/jquery.maskedinput.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="//web.localytics.com/latest/localytics.min.js"></script>
+	<script src='/resources/swap.js'> </script>
 	<script type="text/javascript">
 		var localytics = LocalyticsSession("a592cd77469784a29d9bb69-f41b5cee-2171-11e4-4a11-00a426b17dd8", {logger:true, namespace:"websdk"});
 		localytics.open();
@@ -19,34 +20,6 @@
 	}
 	.ui-content {
 		overflow: scroll;
-	}
-	.ui-header {
-		position: fixed;
-		overflow: auto;
-		height: 76px;
-		padding: 0px;
-		width: 100%;
-		box-shadow: 0px 1px 2px rgba(0,0,0,0.5);
-		z-index: 100;
-	}
-	.ui-header-lhs {
-		float:left;
-	}
-	.ui-header-rhs {
-		float:right;
-		margin-right: 10px;
-		margin-top: 25px;
-	}
-	.ui-header-top-text {
-		font-size: 16px;
-		color: #000000;
-		line-height: 20px;
-		padding-top: 19px;
-	}
-	.ui-header-bottom-text {
-		font-size: 14px;
-		color: #4A4A4A;
-		line-height: 17px;
 	}
 	img.ui-icon {
 		float:left;
@@ -87,7 +60,7 @@
 		line-height: 19px;
 		border-radius: 12px;
 		border: 0px solid white;
-		padding: 3px 19px;		
+		padding: 3px 15px;		
 	}
 	.ui-install-button{
 		
@@ -135,7 +108,6 @@
 	}
 	.ui-bottom {
 		float: left;
-
 		padding: 0px 25px 20px 25px;
 		text-align: center;
 		font-size: 17px;
@@ -182,14 +154,7 @@
 <div class='ui-content'>
 
 	<div class='ui-header'>
-		<img class='ui-icon' src='/resources/images/swap_icon.png'> 
-		<div class='ui-header-lhs'>
-			<div class='ui-header-top-text'> Swap Beta </div>
-			<div class='ui-header-bottom-text'> Duffy, Inc. </div>
-		</div>
-		<div class='ui-header-rhs'>
-			<div class='ui-clickable-button ui-install-button' id='install-text'> Signup </div>
-		</div>
+		<!-- To be filled in via jquery -->
 	</div>
 
 	<div class='ui-body'>
@@ -200,7 +165,7 @@
 			</div>
 
 			<div class="ui-bottom"> 
-				Get notified when you take a picture with your friends!
+				Get notified when you take photos with your friends!
 			</div>
 		</div>
 		<div class='ui-pages'>
@@ -231,8 +196,8 @@
 			</div>
 		</div>
 		<div class="ui-phone-num post-install hidden"> 
-			<div class="ui-text"> 
-				Enter your phone number to get an invite:
+			<div class="ui-text">
+				Enter your phone number to get on the waitlist:
 			</div>
 			<form id='phoneform' action='http://dev.duffyapp.com:8000/strand/api/website_registration'>
 				<input name='phone_number' class="textbox" type="text" id="phone" placeholder="(843) 555-5555">
@@ -243,7 +208,7 @@
 		</div>
 		<div class='ui-bottom ui-post-signup hidden' id='post-signup'>
 			Thanks. You should get a confirmation SMS shortly.
-			<div class="ui-post-signup-more"> How do I get access sooner?</div>
+			<div class="ui-post-signup-more hidden"> How do I get access sooner?</div>
 			<div class="ui-post-signup-details hidden"> More friends on Swap means better photo suggestions for you.
 				Invite your friends and we'll bump you up on the waitlist. 
 				<br>
@@ -267,39 +232,16 @@
 		localytics.tagEvent("DL_Swap_2");
 	}
 
-	function getCode(){
-		pathname = window.location.pathname;
-		lastToken = pathname.substr(pathname.lastIndexOf('/'));
-		if (lastToken.indexOf('html') == -1 && lastToken.length > 5) {
-			return lastToken.substr(1);
-		}
-		// Otherwise, return a new code
-		return genCode()
-	}
-
-	/* 
-	Generates a 6 character code
-	*/
-	function genCode()
-	{
-	    var text = "";
-	    var possible = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
-
-	    for( var i=0; i < 6; i++ )
-	        text += possible.charAt(Math.floor(Math.random() * possible.length));
-
-	    return text;
-	}	
-
-	function detectiPhone(){
-		var ua = navigator.userAgent;
-		if(ua.match(/iPhone/i)){
-			return true;
-		}
-		return false;
-	}
-
 	$(document).ready(function(){
+		// fetch header
+		$('div.ui-header').load('header.html', function(){
+		 	// Install button clicked
+			$('div.ui-install-button').click(function() {
+				signupClicked();
+			});
+		});
+
+
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -308,17 +250,12 @@
 	  	ga('create', 'UA-53853203-1', 'auto');
 	  	ga('send', 'pageview');
 
-	  	// Install button clicked
-		$('div.ui-install-button').click(function() {
-			signupClicked();
-		});
-
 		// submit button clicked
 		$('div.ui-submit-button').click(function(){
 			if ($('#phone').val().indexOf("5555") == -1){
 				url = 'http://prod.strand.duffyapp.com/strand/api/website_registration';
+				url = 'http://dev.duffyapp.com:7000/strand/api/website_registration';
 				code = getCode();
-				console.log(code);
 				$.ajax({
 	     			url: url,
 	     			type: 'get',
